--- a/website/packages/docs/src/pages/api-vanilla-css.mdx
+++ b/website/packages/docs/src/pages/api-vanilla-css.mdx
@@ -11,7 +11,35 @@ If you would like to use Compiled for a **component library** that does not use 
 - Use keys in the [`cssMap` function call](/api-cssmap) to define your styles. We recommend using one `cssMap` function call per component. Then, you can
 - Pass members of the `cssMap` function call into a `vanillaCss` function call, in the place where you want the class names to be applied.
 
-Let's take this example:
+Below is a example for the `vanillaCss` function call:
+
+```tsx
+import { cssMap, vanillaCss } from '@compiled/react';
+
+const styles = cssMap({
+  base: { color: 'black', border: '1px solid blue' },
+  done: {
+    color: 'white',
+    background: 'green',
+    '&:hover': { background: 'pink' },
+    '@media (min-width: 100px)': { background: 'blue' },
+  },
+});
+
+export const myNewDiv = (contentString: string): HTMLDivElement => {
+  const state = 'DONE'; // this might be dynamically set
+
+  const taskItem = document.createElement('div');
+  taskItem.className = vanillaCss([styles.base, state === 'DONE' && styles.done]) ?? '';
+  taskItem.innerText = contentString;
+  return taskItem;
+};
+
+const Hello = myNewDiv('hello');
+document.body.appendChild(Hello);
+```
+
+Below is a more complex example showing how `vanillaCss` can be used. This example will be used in the following sections.
 
 ```tsx
 import { cssMap, vanillaCss } from '@compiled/react';
