--- a/website/packages/docs/src/pages/migrating.mdx
+++ b/website/packages/docs/src/pages/migrating.mdx
@@ -53,4 +53,4 @@ There exists a [codemod](/pkg-codemods#emotion-to-compiled) to streamline this.
 
 For features that aren't available due to the compile-time nature of the library, read our [limitations](/limitations).
 
-For Emotion-specific issues you may run into, see [Migrating from Emotion](/migrating-from-emotion).
+For Emotion-specific issues you may run into, see [Migrating from Emotion](/issues-with-emotion).
