As this has been tested, enable `flattenMultipleSelectors` by default instead.

--- a/website/packages/docs/src/pages/pkg-babel-plugin.mdx
+++ b/website/packages/docs/src/pages/pkg-babel-plugin.mdx
@@ -127,10 +127,8 @@ css({
 });
 ```
 
-This will be enabled by default in a future minor release once impact is validated.
-
 - Type: `boolean`
-- Default: `false`
+- Default: `true`
 
 #### importReact
 
