--- a/website/packages/docs/src/pages/pkg-babel-plugin.mdx
+++ b/website/packages/docs/src/pages/pkg-babel-plugin.mdx
@@ -41,7 +41,7 @@ Configure in your Babel config.
 }
 ```
 
-If you choose to configure Compiled through Webpack or Parcel (recommended), you can pass options for `@compiled/babel-plugin` through those configurations. See [`@compiled/webpack-loader`](/pkg-webpack-loader) and [`@compiled/parcel-config`](/pkg-parcel-config) for more information.
+If you choose to configure Compiled through Webpack, Vite or Parcel (recommended), you can pass options for `@compiled/babel-plugin` through those configurations. See [`@compiled/webpack-loader`](/pkg-webpack-loader) [`@compiled/vite-plugin`](/pkg-vite-plugin), and [`@compiled/parcel-config`](/pkg-parcel-config) for more information.
 
 `@compiled/babel-plugin` supports the following options:
 
@@ -84,7 +84,7 @@ Will cache the result of statically evaluated imports.
 
 Adds a prefix to the generated hashed css rule names. The valued passed to it gets hashed in conjunction with the rest of the rule declaration.
 
-This is useful when `@compiled` is being used in a micro frontend environment by multiple packages and you want to avoid specificity issues. Please note that mixing this with extraction is not supported and Parcel or Webpack will throw an error if combined.
+This is useful when `@compiled` is being used in a micro frontend environment by multiple packages and you want to avoid specificity issues. Please note that mixing this with extraction is not supported and Webpack, Vite or Parcel will throw an error if combined.
 
 The currently accepted regex for this value is `^[a-zA-Z\-_]+[a-zA-Z\-_0-9]*$`.
 
