Clarify plugin ordering requirement in README and installation documentation

--- a/website/packages/docs/src/pages/installation.mdx
+++ b/website/packages/docs/src/pages/installation.mdx
@@ -43,7 +43,7 @@ npm install @compiled/vite-plugin --save-dev
 ```
 
 Add the plugin to your [Vite config](https://vitejs.dev/config/).
-Make sure the Compiled plugin is defined before the React plugin.
+Make sure the Compiled plugin is defined before the React plugin (it should by default).
 
 ```js
 // vite.config.js
